@@ -1,5 +1,4 @@
-(declaim (optimize (debug 3) (safety 3) (speed 0)))
-;;; Copyright 2009 Rudolph Neeser <rudy.neeser@gmail.com>.
+;;; Copyright 2009-2010 Rudolph Neeser <rudy.neeser@gmail.com>.
 ;;; 
 ;;; This file is part of CL-HEAP
 ;;; 
